--- a/app/src/main/res/layout/add_habit_dialog.xml
+++ b/app/src/main/res/layout/add_habit_dialog.xml
@@ -27,4 +27,11 @@
         android:inputType="text"
         android:hint="@string/add_habit_weekday_hint"/>
 
+    <!--<Button-->
+        <!--android:id="@+id/add_habit_done_button"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/add_habit_button_text"-->
+        <!--/>-->
+
 </LinearLayout>
