First add completion functionality

--- a/app/src/main/res/layout/activity_habit_list.xml
+++ b/app/src/main/res/layout/activity_habit_list.xml
@@ -3,12 +3,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <!--<TextView-->
-        <!--android:id="@+id/title_bar"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textSize="@dimen/activity_horizontal_margin"-->
-        <!--android:text="@string/app_name"/>-->
     <ListView
         android:id="@+id/habit_list"
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -24,6 +18,11 @@
         style="@android:style/TextAppearance.Holo.Medium">
     </ListView>
 
+    <Button
+        android:id="@+id/save_completion_button"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/save_completions"/>
     <Button
         android:id="@+id/add_habit_button"
         android:layout_width="match_parent"
