--- a/app/src/main/res/layout/activity_habit_list.xml
+++ b/app/src/main/res/layout/activity_habit_list.xml
@@ -37,5 +37,11 @@
         android:layout_height="match_parent"
         android:text="@string/delete_habit"/>
 
+    <Button
+        android:id="@+id/show_stats_button"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/show_stats"/>
+
 
 </LinearLayout>
