Show date on top of screen

--- a/app/src/main/res/layout/activity_habit_list.xml
+++ b/app/src/main/res/layout/activity_habit_list.xml
@@ -3,6 +3,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/today_date_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textAlignment="center"
+        android:textStyle="bold"/>
+
     <ListView
         android:id="@+id/habit_list"
         xmlns:android="http://schemas.android.com/apk/res/android"
